<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sous_menu_demarche">

    <Button
        android:id="@+id/fonction"
        android:layout_width="203dp"
        android:layout_height="67dp"
        android:text="@string/fonctionnement"
        android:backgroundTint="@color/test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/button5"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/test"
        android:text="@string/Trouve_medecin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="127dp"
        android:layout_height="67dp"
        android:text="@string/info2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />
</androidx.constraintlayout.widget.ConstraintLayout>